--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react-native": "0.71.7",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-redux": "^8.0.5",
-    "react-native-webview": "^12.0.2"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^12.0.2",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
