--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.10",
     "expo-av": "^13.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
     "react": "18.2.0",
